--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -6939,7 +6939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -7017,6 +7017,14 @@
     "        print(\"Tagalog:\", ' '.join(tokens))\n",
     "    else:\n",
     "        print(\"Taglish:\", ' '.join(tokens))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# may mga changes pa ako di lang yan haha di ko lang muna nilagay uwu -jords"
    ]
   }
  ],
