--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -7026,6 +7026,14 @@
    "source": [
     "# may mga changes pa ako di lang yan haha di ko lang muna nilagay uwu -jords"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST COMMIT"
+   ]
   }
  ],
  "metadata": {
@@ -7044,7 +7052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
