--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -1186,20 +1186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7249122807017544\n"
+      "Accuracy: 0.7263157894736842\n"
      ]
     }
    ],
    "source": [
     "# Train the SVM model\n",
-    "clf = svm.SVC()\n",
+    "clf = svm.SVC(kernel='linear')\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
     "# Test the model on the testing set\n",
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,21 +1235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7242105263157895\n"
+      "Accuracy: 0.7270175438596491\n"
      ]
     }
    ],
    "source": [
+    "import joblib\n",
     "# Train the SVM model\n",
-    "clf = svm.SVC()\n",
+    "clf = svm.SVC(kernel='linear')\n",
     "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Save the trained model as a file\n",
+    "joblib.dump(clf, 'svm_model.joblib')\n",
     "\n",
     "# Test the model on the testing set\n",
     "y_pred = clf.predict(X_test)\n",
@@ -1257,6 +1261,76 @@
     "# Evaluate the model's performance\n",
     "accuracy = clf.score(X_test, y_test)\n",
     "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "putangina mong hayop mamatay\n",
+      "[0]\n",
+      "Positive sentiment\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "import re\n",
+    "import urllib.request, json\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import numpy as np\n",
+    "import joblib\n",
+    "\n",
+    "# Download Filipino stopwords\n",
+    "with urllib.request.urlopen(\"https://raw.githubusercontent.com/stopwords-iso/stopwords-tl/master/stopwords-tl.json\") as url:\n",
+    "    stopwords_tl = json.loads(url.read().decode())\n",
+    "\n",
+    "# Load the trained SVM model\n",
+    "clf = joblib.load('svm_model.joblib')\n",
+    "\n",
+    "# Define function for text preprocessing\n",
+    "def preprocess_text(text):\n",
+    "    # Remove unwanted characters and digits\n",
+    "    text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
+    "    #Tokenize the text\n",
+    "    tokens = word_tokenize(text)\n",
+    "    # Convert tokens to lowercase\n",
+    "    tokens = [word.lower() for word in tokens]\n",
+    "    # # Remove stopwords\n",
+    "    tokens = [word for word in tokens if word.lower() not in stopwords_tl]\n",
+    "    # Lemmatize the tokens\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    tokens = [lemmatizer.lemmatize(word) for word in tokens]\n",
+    "    # Join the tokens back into a string\n",
+    "    text = ' '.join(tokens)\n",
+    "    return text\n",
+    "\n",
+    "# Get input from user\n",
+    "sentiment = input(\"Enter a sentence to analyze: \")\n",
+    "\n",
+    "# Preprocess the input text\n",
+    "sentiment = preprocess_text(sentiment)\n",
+    "\n",
+    "# Vectorize the input text\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "sentiment_vectorized = vectorizer.fit_transform([sentiment])\n",
+    "\n",
+    "# Predict the sentiment using the trained SVM model\n",
+    "prediction = clf.predict(sentiment_vectorized)\n",
+    "print(sentiment)\n",
+    "print(prediction)\n",
+    "# Print the prediction\n",
+    "if prediction == 1:\n",
+    "    print(\"Negative sentiment\")\n",
+    "else:\n",
+    "    print(\"Positive sentiment\")\n"
    ]
   },
   {
