legmma notebook need work

--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -33,17 +33,17 @@
    "outputs": [],
    "source": [
     "# training data\n",
-    "train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=5000)\n",
+    "#train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=5000)\n",
     "\n",
     "# testing data\n",
-    "test = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\test.csv\", nrows=5000)\n",
+    "#test = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\test.csv\", nrows=5000)\n",
     "\n",
     "\n",
     "# #training data\n",
-    "# train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\test.csv\", nrows=5000)\n",
+    "train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\", nrows=5000)\n",
     "\n",
     "# #testing data\n",
-    "# test = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\test.csv\", nrows=5000)\n",
+    "test = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\test.csv\", nrows=5000)\n",
     "\n",
     "\n"
    ]
@@ -392,8 +392,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                text  label   \n",
-       "0  Inaasahan na ni Vice President Jejomar Binay n...      0  \\\n",
+       "                                                text  label  \\\n",
+       "0  Inaasahan na ni Vice President Jejomar Binay n...      0   \n",
        "1  Mar Roxas TANG INA TUWID NA DAAN DAW .. EH SYA...      1   \n",
        "2  Salamat sa walang sawang suporta ng mga taga m...      0   \n",
        "3         @rapplerdotcom putangina mo binay TAKBO PA      1   \n",
@@ -565,8 +565,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   text  label   \n",
-       "0     Inaasahan na ni Vice President Jejomar Binay n...      0  \\\n",
+       "                                                   text  label  \\\n",
+       "0     Inaasahan na ni Vice President Jejomar Binay n...      0   \n",
        "1     Mar Roxas TANG INA TUWID NA DAAN DAW .. EH SYA...      1   \n",
        "2     Salamat sa walang sawang suporta ng mga taga m...      0   \n",
        "3            @rapplerdotcom putangina mo binay TAKBO PA      1   \n",
@@ -730,8 +730,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   label                                               text   \n",
-       "0      0  Inaasahan na ni Vice President Jejomar Binay n...  \\\n",
+       "   label                                               text  \\\n",
+       "0      0  Inaasahan na ni Vice President Jejomar Binay n...   \n",
        "1      1  Mar Roxas TANG INA TUWID NA DAAN DAW .. EH SYA...   \n",
        "2      0  Salamat sa walang sawang suporta ng mga taga m...   \n",
        "3      1         @rapplerdotcom putangina mo binay TAKBO PA   \n",
@@ -900,8 +900,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         clean_tweet   \n",
-       "0  inaasahan na ni vice president jejomar binay n...  \\\n",
+       "                                         clean_tweet  \\\n",
+       "0  inaasahan na ni vice president jejomar binay n...   \n",
        "1  mar roxas tang ina tuwid na daan daw  eh sya n...   \n",
        "2  salamat sa walang sawang suporta ng mga taga m...   \n",
        "3                        putangina mo binay takbo pa   \n",
@@ -1051,8 +1051,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                                          rm_stpwrds   \n",
-       "0       inaasahan vice president jejomar binay taong  \\\n",
+       "                                          rm_stpwrds  \\\n",
+       "0       inaasahan vice president jejomar binay taong   \n",
        "1  mar roxas tang ina tuwid daan daw eh sya nga d...   \n",
        "2  salamat sawang suporta taga makati pagbabalik ...   \n",
        "3                           putangina mo binay takbo   \n",
@@ -1117,48 +1117,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3195</th>\n",
-       "      <td>[whats, the, similarity, of, torre, de, manila...</td>\n",
-       "      <td>[whats, the, similarity, of, torre, de, manila...</td>\n",
+       "      <th>2446</th>\n",
+       "      <td>[nya, demenem, i, binay, a, nyaaa, huhu]</td>\n",
+       "      <td>[nya, demenem, i, binay, a, nyaaa, huhu]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>706</th>\n",
-       "      <td>[tanga, lang, boboto, kay, mar, roxas, duterte...</td>\n",
-       "      <td>[tanga, lang, boboto, kay, mar, roxas, duterte...</td>\n",
+       "      <th>4191</th>\n",
+       "      <td>[when, i, woke, up, i, was, shocked, that, so,...</td>\n",
+       "      <td>[when, i, woke, up, i, wa, shocked, that, so, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1982</th>\n",
-       "      <td>[dami, issue, kay, grace, poe, halatang, ayaw,...</td>\n",
-       "      <td>[dami, issue, kay, grace, poe, halatang, ayaw,...</td>\n",
+       "      <th>437</th>\n",
+       "      <td>[binay, says, he, doesnt, know, where, friend,...</td>\n",
+       "      <td>[binay, say, he, doesnt, know, where, friend, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2929</th>\n",
-       "      <td>[bday, vp, binay, namigay, daw, wheelchairs, r...</td>\n",
-       "      <td>[bday, vp, binay, namigay, daw, wheelchair, ri...</td>\n",
+       "      <th>2941</th>\n",
+       "      <td>[seryoso, tacloban, nga, napala, kay, mar, rox...</td>\n",
+       "      <td>[seryoso, tacloban, nga, napala, kay, mar, rox...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4388</th>\n",
-       "      <td>[nognog, pandak, aish, naiirita, ad, binay, st...</td>\n",
-       "      <td>[nognog, pandak, aish, naiirita, ad, binay, st...</td>\n",
+       "      <th>672</th>\n",
+       "      <td>[hay, nako, poe, di, mo, talaga, kayang, bangg...</td>\n",
+       "      <td>[hay, nako, poe, di, mo, talaga, kayang, bangg...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               tokenize   \n",
-       "3195  [whats, the, similarity, of, torre, de, manila...  \\\n",
-       "706   [tanga, lang, boboto, kay, mar, roxas, duterte...   \n",
-       "1982  [dami, issue, kay, grace, poe, halatang, ayaw,...   \n",
-       "2929  [bday, vp, binay, namigay, daw, wheelchairs, r...   \n",
-       "4388  [nognog, pandak, aish, naiirita, ad, binay, st...   \n",
+       "                                               tokenize  \\\n",
+       "2446           [nya, demenem, i, binay, a, nyaaa, huhu]   \n",
+       "4191  [when, i, woke, up, i, was, shocked, that, so,...   \n",
+       "437   [binay, says, he, doesnt, know, where, friend,...   \n",
+       "2941  [seryoso, tacloban, nga, napala, kay, mar, rox...   \n",
+       "672   [hay, nako, poe, di, mo, talaga, kayang, bangg...   \n",
        "\n",
        "                                               lematize  \n",
-       "3195  [whats, the, similarity, of, torre, de, manila...  \n",
-       "706   [tanga, lang, boboto, kay, mar, roxas, duterte...  \n",
-       "1982  [dami, issue, kay, grace, poe, halatang, ayaw,...  \n",
-       "2929  [bday, vp, binay, namigay, daw, wheelchair, ri...  \n",
-       "4388  [nognog, pandak, aish, naiirita, ad, binay, st...  "
+       "2446           [nya, demenem, i, binay, a, nyaaa, huhu]  \n",
+       "4191  [when, i, woke, up, i, wa, shocked, that, so, ...  \n",
+       "437   [binay, say, he, doesnt, know, where, friend, ...  \n",
+       "2941  [seryoso, tacloban, nga, napala, kay, mar, rox...  \n",
+       "672   [hay, nako, poe, di, mo, talaga, kayang, bangg...  "
       ]
      },
      "execution_count": 24,
@@ -1186,14 +1186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.7249122807017544\n"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Train the SVM model\u001b[39;00m\n\u001b[0;32m      2\u001b[0m clf \u001b[39m=\u001b[39m svm\u001b[39m.\u001b[39mSVC()\n\u001b[1;32m----> 3\u001b[0m clf\u001b[39m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      5\u001b[0m \u001b[39m# Test the model on the testing set\u001b[39;00m\n\u001b[0;32m      6\u001b[0m y_pred \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39mpredict(X_test)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
      ]
     }
    ],
@@ -1212,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1265,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PREFIX_SET = [\n",
+    "    'nakikipag', 'pakikipag',\n",
+    "    'pinakama', 'pagpapa',\n",
+    "    'pinagka', 'panganga',\n",
+    "    'makapag', 'nakapag',\n",
+    "    'tagapag', 'makipag',\n",
+    "    'nakipag', 'tigapag',\n",
+    "    'pakiki', 'magpa',\n",
+    "    'napaka', 'pinaka',\n",
+    "    'ipinag', 'pagka',\n",
+    "    'pinag', 'mapag',\n",
+    "    'mapa', 'taga',\n",
+    "    'ipag', 'tiga',\n",
+    "    'pala', 'pina',\n",
+    "    'pang', 'naka',\n",
+    "    'nang', 'mang',\n",
+    "    'sing',\n",
+    "    'ipa', 'pam',\n",
+    "    'pan', 'pag',\n",
+    "    'tag', 'mai',\n",
+    "    'mag', 'nam',\n",
+    "    'nag', 'man',\n",
+    "    'may', 'ma',\n",
+    "    'na', 'ni',\n",
+    "    'pa', 'ka',\n",
+    "    'um', 'in',\n",
+    "    'i',\n",
+    "]\n",
+    "\n",
+    "INFIX_SET = [\n",
+    "    'um', 'in',\n",
+    "]\n",
+    "\n",
+    "SUFFIX_SET = [\n",
+    "    'syon', 'dor',\n",
+    "    'ita', 'han',\n",
+    "    'hin', 'ing',\n",
+    "    'ang', 'ng',\n",
+    "    'an', 'in',\n",
+    "    'g',\n",
+    "]\n",
+    "\n",
+    "def tag_lemmatize(word):\n",
+    "    prefix = ''\n",
+    "    suffix = ''\n",
+    "    infix = ''\n",
+    "    root = word\n",
+    "\n",
+    "    # Handle repeated prefixes\n",
+    "    for p in PREFIX_SET:\n",
+    "        if word.startswith(p) and word[len(p):].startswith(p):\n",
+    "            prefix = p\n",
+    "            root = word[len(p):]\n",
+    "            break\n",
+    "        elif word.startswith(p):\n",
+    "            prefix = p\n",
+    "            root = word[len(p):]\n",
+    "            for p2 in PREFIX_SET:\n",
+    "                if root.startswith(p2):\n",
+    "                    root = root[len(p2):]\n",
+    "                    break\n",
+    "            break\n",
+    "\n",
+    "    # Handle repeated suffixes\n",
+    "    for s in SUFFIX_SET:\n",
+    "        if word.endswith(s) and word[-len(s)-len(word[:-len(s)].rstrip(s)):-len(s)] == s:\n",
+    "            suffix = s\n",
+    "            root = word[:-len(s)]\n",
+    "            break\n",
+    "        elif word.endswith(s):\n",
+    "            suffix = s\n",
+    "            root = word[:-len(s)]\n",
+    "            for s2 in SUFFIX_SET:\n",
+    "                if root.endswith(s2):\n",
+    "                    root = root[:-len(s2)]\n",
+    "                    break\n",
+    "            break\n",
+    "\n",
+    "    for i in INFIX_SET:\n",
+    "        if i in root:\n",
+    "            infix = i\n",
+    "            root = root.replace(i, '')\n",
+    "            break\n",
+    "\n",
+    "    # Handle repeated letters\n",
+    "    root_len = len(root)\n",
+    "    i = 0\n",
+    "    while i < root_len - 1:\n",
+    "        if root[i] == root[i+1]:\n",
+    "            root = root[:i] + root[i+1:]\n",
+    "            root_len -= 1\n",
+    "        else:\n",
+    "            i += 1\n",
+    "\n",
+    "    return root\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naglalaro\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'naglalaro'\n",
+    "lemmatized_word = tag_lemmatize(word)\n",
+    "print(lemmatized_word) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
