--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,22 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training data\n",
-    "#train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=5000)\n",
+    "#training data\n",
+    "train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=5000)\n",
     "\n",
-    "# testing data\n",
-    "#test = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\test.csv\", nrows=5000)\n",
+    "#testing data\n",
+    "test = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\test.csv\", nrows=5000)\n",
     "\n",
     "\n",
-    "# #training data\n",
-    "train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\", nrows=5000)\n",
+    "# # #training data\n",
+    "# train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\", nrows=5000)\n",
     "\n",
-    "# #testing data\n",
-    "test = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\test.csv\", nrows=5000)\n",
+    "# # #testing data\n",
+    "# test = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\test.csv\", nrows=5000)\n",
     "\n",
     "\n"
    ]
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "[5000 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "2653"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "2347"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -392,8 +392,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                text  label  \\\n",
-       "0  Inaasahan na ni Vice President Jejomar Binay n...      0   \n",
+       "                                                text  label   \n",
+       "0  Inaasahan na ni Vice President Jejomar Binay n...      0  \\\n",
        "1  Mar Roxas TANG INA TUWID NA DAAN DAW .. EH SYA...      1   \n",
        "2  Salamat sa walang sawang suporta ng mga taga m...      0   \n",
        "3         @rapplerdotcom putangina mo binay TAKBO PA      1   \n",
@@ -417,7 +417,7 @@
        "9  srsly how can binay do away with no tax for th...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "253"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -524,88 +524,77 @@
        "      <td>binay with selective amnesia forgetting about ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>It doesn't matter whoever won between Duterte ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>it doesnt matter whoever won between duterte &amp;...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4994</th>\n",
-       "      <td>@jefk_rew pity those poor people who were invo...</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Nognog? Pero nognog din ang nag malasakit? Wtf...</td>\n",
        "      <td>1</td>\n",
-       "      <td>pity those poor people who were involved in th...</td>\n",
+       "      <td>nognog pero nognog din ang nag malasakit wtf t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4995</th>\n",
-       "      <td>Awww DUTERTE Na wag Lang si Roxas</td>\n",
+       "      <th>8</th>\n",
+       "      <td>What Abi Binay said on running for Makati mayo...</td>\n",
        "      <td>0</td>\n",
-       "      <td>awww duterte na wag lang si roxas</td>\n",
+       "      <td>what abi binay said on running for makati mayor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4996</th>\n",
-       "      <td>RT @mikkieugenio: If the SC disqualifies Poe a...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>if the sc disqualifies poe as president eithe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4997</th>\n",
-       "      <td>\"Pag naging presidente si Binay, wala kayong t...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>pag naging presidente si binay wala kayong tax...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4998</th>\n",
-       "      <td>Yan na naman ang walang kwentang commercial ni...</td>\n",
+       "      <th>9</th>\n",
+       "      <td>Srsly. How can Binay do away with no tax for t...</td>\n",
        "      <td>1</td>\n",
-       "      <td>yan na naman ang walang kwentang commercial ni...</td>\n",
+       "      <td>srsly how can binay do away with no tax for th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Sen Grace Poe, puro ka puso. Kaya lugmok bansa...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>sen grace poe puro ka puso kaya lugmok bansa n...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4747 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   text  label  \\\n",
-       "0     Inaasahan na ni Vice President Jejomar Binay n...      0   \n",
-       "1     Mar Roxas TANG INA TUWID NA DAAN DAW .. EH SYA...      1   \n",
-       "2     Salamat sa walang sawang suporta ng mga taga m...      0   \n",
-       "3            @rapplerdotcom putangina mo binay TAKBO PA      1   \n",
-       "4     Binay with selective amnesia, forgetting about...      0   \n",
-       "...                                                 ...    ...   \n",
-       "4994  @jefk_rew pity those poor people who were invo...      1   \n",
-       "4995                  Awww DUTERTE Na wag Lang si Roxas      0   \n",
-       "4996  RT @mikkieugenio: If the SC disqualifies Poe a...      0   \n",
-       "4997  \"Pag naging presidente si Binay, wala kayong t...      0   \n",
-       "4998  Yan na naman ang walang kwentang commercial ni...      1   \n",
+       "                                                 text  label   \n",
+       "0   Inaasahan na ni Vice President Jejomar Binay n...      0  \\\n",
+       "1   Mar Roxas TANG INA TUWID NA DAAN DAW .. EH SYA...      1   \n",
+       "2   Salamat sa walang sawang suporta ng mga taga m...      0   \n",
+       "3          @rapplerdotcom putangina mo binay TAKBO PA      1   \n",
+       "4   Binay with selective amnesia, forgetting about...      0   \n",
+       "5   It doesn't matter whoever won between Duterte ...      0   \n",
+       "6   Nognog? Pero nognog din ang nag malasakit? Wtf...      1   \n",
+       "8   What Abi Binay said on running for Makati mayo...      0   \n",
+       "9   Srsly. How can Binay do away with no tax for t...      1   \n",
+       "10  Sen Grace Poe, puro ka puso. Kaya lugmok bansa...      1   \n",
        "\n",
-       "                                            clean_tweet  \n",
-       "0     inaasahan na ni vice president jejomar binay n...  \n",
-       "1     mar roxas tang ina tuwid na daan daw  eh sya n...  \n",
-       "2     salamat sa walang sawang suporta ng mga taga m...  \n",
-       "3                           putangina mo binay takbo pa  \n",
-       "4     binay with selective amnesia forgetting about ...  \n",
-       "...                                                 ...  \n",
-       "4994  pity those poor people who were involved in th...  \n",
-       "4995                  awww duterte na wag lang si roxas  \n",
-       "4996   if the sc disqualifies poe as president eithe...  \n",
-       "4997  pag naging presidente si binay wala kayong tax...  \n",
-       "4998  yan na naman ang walang kwentang commercial ni...  \n",
-       "\n",
-       "[4747 rows x 3 columns]"
+       "                                          clean_tweet  \n",
+       "0   inaasahan na ni vice president jejomar binay n...  \n",
+       "1   mar roxas tang ina tuwid na daan daw  eh sya n...  \n",
+       "2   salamat sa walang sawang suporta ng mga taga m...  \n",
+       "3                         putangina mo binay takbo pa  \n",
+       "4   binay with selective amnesia forgetting about ...  \n",
+       "5   it doesnt matter whoever won between duterte &...  \n",
+       "6   nognog pero nognog din ang nag malasakit wtf t...  \n",
+       "8     what abi binay said on running for makati mayor  \n",
+       "9   srsly how can binay do away with no tax for th...  \n",
+       "10  sen grace poe puro ka puso kaya lugmok bansa n...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.dropna(axis='rows')"
+    "train.dropna(axis='rows').head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
