--- a/legmma.ipynb
+++ b/legmma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,9 @@
     "REPLACE_NO_SPACE = re.compile(\"(\\d)|(\\.)|(\\;)|(\\:)|(\\!)|(\\')|(\\?)|(\\,)|(\\\")|(\\|)|(\\()|(\\))|(\\[)|(\\])|(\\%)|(\\$)|(\\>)|(\\<)|(\\{)|(\\})\")\n",
     "REPLACE_WITH_SPACE = re.compile(\"(<br\\s/><br\\s/?)|(-)|(/)|(:).\")\n",
     "\n",
-    "train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\", nrows=10)\n",
+    "train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=10)\n",
+    "\n",
+    "#train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\", nrows=10)\n",
     "\n",
     "\n",
     "train_tweet = clean_tweets(train[\"text\"])\n",
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,62 +666,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langdetect import detect\n",
+    "import pandas as pd\n",
+    "\n",
+    "lemmatized_tokens = []\n",
+    "for row in train['tokenize']:\n",
+    "    lemmatized_row = []\n",
+    "    for token in row:\n",
+    "        token = str(''.join(token))\n",
+    "        lemmatized_token = stemmer(token)\n",
+    "        lemmatized_token = ''.join(lemmatized_token)\n",
+    "        lemmatized_row.append(lemmatized_token)\n",
+    "    lemmatized_tokens.append(lemmatized_row)\n",
+    "    \n",
+    "train['lemmatize_modstem'] = pd.Series(lemmatized_tokens)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object, got 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[197], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Perform stemming\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m train[\u001b[39m'\u001b[39m\u001b[39mstemmed\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m train[\u001b[39m'\u001b[39;49m\u001b[39mtokenize\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mapply(stemmer)\u001b[39m.\u001b[39;49mapply(nltk\u001b[39m.\u001b[39;49mtokenize\u001b[39m.\u001b[39;49mWhitespaceTokenizer()\u001b[39m.\u001b[39;49mtokenize) \n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\series.py:4771\u001b[0m, in \u001b[0;36mSeries.apply\u001b[1;34m(self, func, convert_dtype, args, **kwargs)\u001b[0m\n\u001b[0;32m   4661\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply\u001b[39m(\n\u001b[0;32m   4662\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m   4663\u001b[0m     func: AggFuncType,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4666\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[0;32m   4667\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m Series:\n\u001b[0;32m   4668\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   4669\u001b[0m \u001b[39m    Invoke function on values of Series.\u001b[39;00m\n\u001b[0;32m   4670\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4769\u001b[0m \u001b[39m    dtype: float64\u001b[39;00m\n\u001b[0;32m   4770\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 4771\u001b[0m     \u001b[39mreturn\u001b[39;00m SeriesApply(\u001b[39mself\u001b[39;49m, func, convert_dtype, args, kwargs)\u001b[39m.\u001b[39;49mapply()\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\apply.py:1123\u001b[0m, in \u001b[0;36mSeriesApply.apply\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1120\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapply_str()\n\u001b[0;32m   1122\u001b[0m \u001b[39m# self.f is Callable\u001b[39;00m\n\u001b[1;32m-> 1123\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_standard()\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\apply.py:1174\u001b[0m, in \u001b[0;36mSeriesApply.apply_standard\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1172\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1173\u001b[0m         values \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39mastype(\u001b[39mobject\u001b[39m)\u001b[39m.\u001b[39m_values\n\u001b[1;32m-> 1174\u001b[0m         mapped \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39;49mmap_infer(\n\u001b[0;32m   1175\u001b[0m             values,\n\u001b[0;32m   1176\u001b[0m             f,\n\u001b[0;32m   1177\u001b[0m             convert\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconvert_dtype,\n\u001b[0;32m   1178\u001b[0m         )\n\u001b[0;32m   1180\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(mapped) \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(mapped[\u001b[39m0\u001b[39m], ABCSeries):\n\u001b[0;32m   1181\u001b[0m     \u001b[39m# GH#43986 Need to do list(mapped) in order to get treated as nested\u001b[39;00m\n\u001b[0;32m   1182\u001b[0m     \u001b[39m#  See also GH#25959 regarding EA support\u001b[39;00m\n\u001b[0;32m   1183\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39m_constructor_expanddim(\u001b[39mlist\u001b[39m(mapped), index\u001b[39m=\u001b[39mobj\u001b[39m.\u001b[39mindex)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\_libs\\lib.pyx:2924\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\nltk\\tokenize\\regexp.py:127\u001b[0m, in \u001b[0;36mRegexpTokenizer.tokenize\u001b[1;34m(self, text)\u001b[0m\n\u001b[0;32m    125\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_gaps:\n\u001b[0;32m    126\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_discard_empty:\n\u001b[1;32m--> 127\u001b[0m         \u001b[39mreturn\u001b[39;00m [tok \u001b[39mfor\u001b[39;00m tok \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_regexp\u001b[39m.\u001b[39msplit(text) \u001b[39mif\u001b[39;00m tok]\n\u001b[0;32m    128\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    129\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_regexp\u001b[39m.\u001b[39msplit(text)\n",
-      "\u001b[1;31mTypeError\u001b[0m: expected string or bytes-like object, got 'list'"
-     ]
+     "data": {
+      "text/plain": [
+       "0    [inaasahan, vice, president, eomar, binay, taong]\n",
+       "1    [mar, roas, tang, ina, tuwid, daan, daw, eh, s...\n",
+       "2    [salamat, sawang, suporta, taga, makati, pagba...\n",
+       "3                        [putangina, mo, binay, takbo]\n",
+       "4    [binay, with, selective, amnesia, forgetting, ...\n",
+       "5    [it, doesn, t, matter, whoever, won, between, ...\n",
+       "6    [nognog, nognog, nag, malasakit, wtf, tangina,...\n",
+       "7                                                   []\n",
+       "8    [what, abi, binay, said, on, running, for, mak...\n",
+       "9    [srsly, how, can, binay, do, away, with, no, t...\n",
+       "Name: lemmatize_modstem, dtype: object"
+      ]
+     },
+     "execution_count": 379,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "train['lemmatize_modstem']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Perform stemming\n",
     "train['stemmed'] = train['tokenize'].apply(stemmer)\n",
-    "train['stemmed'] = train['stemmed'].apply(nltk.tokenize.WhitespaceTokenizer().tokenize) \n"
+    "#train['stemmed'] = train['stemmed'].apply(nltk.tokenize.WhitespaceTokenizer().tokenize) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0        [inaasa, vice, resident, jejomar, binay, tao]\n",
-      "1    [mar, roxas, tang, ina, tuwid, daan, daw, eh, ...\n",
-      "2    [salamat, sawa, suporta, taga, kati, balik, bi...\n",
-      "3                        [putangina, mo, binay, takbo]\n",
-      "4    [binay, with, selective, amnesia, forgett, abo...\n",
-      "5    [it, doesn, t, matted, hoeved, won, between, d...\n",
-      "6    [nognog, nognog, nag, malasakit, wtf, tangina,...\n",
-      "7                                                   []\n",
-      "8    [what, abi, binay, said, on, runni, for, kati,...\n",
-      "9    [srsly, how, can, binay, do, away, with, no, t...\n",
-      "Name: stemmed, dtype: object\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stemmed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[asa, vice, resident, jejomar, binay, tao]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[mar, roxas, tang, ina, tuwid, daan, daw, eh, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[salamat, sawa, suporta, taga, kati, balik, bi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[putangina, mo, binay, takbo]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[binay, with, selective, amnesia, forgett, abo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>[it, doesn, t, matted, hoeved, won, between, d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>[nognog, nognog, nag, malasakit, wtf, tangina,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>[what, abi, binay, said, on, runni, for, kati,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>[srsly, how, can, binay, do, away, with, no, t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             stemmed\n",
+       "0         [asa, vice, resident, jejomar, binay, tao]\n",
+       "1  [mar, roxas, tang, ina, tuwid, daan, daw, eh, ...\n",
+       "2  [salamat, sawa, suporta, taga, kati, balik, bi...\n",
+       "3                      [putangina, mo, binay, takbo]\n",
+       "4  [binay, with, selective, amnesia, forgett, abo...\n",
+       "5  [it, doesn, t, matted, hoeved, won, between, d...\n",
+       "6  [nognog, nognog, nag, malasakit, wtf, tangina,...\n",
+       "7                                                 []\n",
+       "8  [what, abi, binay, said, on, runni, for, kati,...\n",
+       "9  [srsly, how, can, binay, do, away, with, no, t..."
+      ]
+     },
+     "execution_count": 381,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(train.stemmed)"
+    "train[['stemmed']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +860,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>[inaasahan, vice, president, jejomar, binay, t...</td>\n",
-       "      <td>[inaasa, vice, resident, jejomar, binay, tao]</td>\n",
+       "      <td>[asa, vice, resident, jejomar, binay, tao]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -779,33 +886,73 @@
        "      <td>[binay, with, selective, amnesia, forgetting, ...</td>\n",
        "      <td>[binay, with, selective, amnesia, forgett, abo...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[it, doesn, t, matter, whoever, won, between, ...</td>\n",
+       "      <td>[it, doesn, t, matted, hoeved, won, between, d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[nognog, nognog, nag, malasakit, wtf, tangina,...</td>\n",
+       "      <td>[nognog, nognog, nag, malasakit, wtf, tangina,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[what, abi, binay, said, on, running, for, mak...</td>\n",
+       "      <td>[what, abi, binay, said, on, runni, for, kati,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[srsly, how, can, binay, do, away, with, no, t...</td>\n",
+       "      <td>[srsly, how, can, binay, do, away, with, no, t...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   label                                           tokenize  \\\n",
-       "0      0  [inaasahan, vice, president, jejomar, binay, t...   \n",
+       "   label                                           tokenize   \n",
+       "0      0  [inaasahan, vice, president, jejomar, binay, t...  \\\n",
        "1      1  [mar, roxas, tang, ina, tuwid, daan, daw, eh, ...   \n",
        "2      0  [salamat, sawang, suporta, taga, makati, pagba...   \n",
        "3      1                      [putangina, mo, binay, takbo]   \n",
        "4      0  [binay, with, selective, amnesia, forgetting, ...   \n",
+       "5      0  [it, doesn, t, matter, whoever, won, between, ...   \n",
+       "6      1  [nognog, nognog, nag, malasakit, wtf, tangina,...   \n",
+       "7      1                                                 []   \n",
+       "8      0  [what, abi, binay, said, on, running, for, mak...   \n",
+       "9      1  [srsly, how, can, binay, do, away, with, no, t...   \n",
        "\n",
        "                                             stemmed  \n",
-       "0      [inaasa, vice, resident, jejomar, binay, tao]  \n",
+       "0         [asa, vice, resident, jejomar, binay, tao]  \n",
        "1  [mar, roxas, tang, ina, tuwid, daan, daw, eh, ...  \n",
        "2  [salamat, sawa, suporta, taga, kati, balik, bi...  \n",
        "3                      [putangina, mo, binay, takbo]  \n",
-       "4  [binay, with, selective, amnesia, forgett, abo...  "
+       "4  [binay, with, selective, amnesia, forgett, abo...  \n",
+       "5  [it, doesn, t, matted, hoeved, won, between, d...  \n",
+       "6  [nognog, nognog, nag, malasakit, wtf, tangina,...  \n",
+       "7                                                 []  \n",
+       "8  [what, abi, binay, said, on, runni, for, kati,...  \n",
+       "9  [srsly, how, can, binay, do, away, with, no, t...  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train[['label','tokenize','stemmed']].head(5)"
+    "train[['label','tokenize','stemmed']].head(10)"
    ]
   }
  ],
