attempted tg_stemmer

--- a/legmma.ipynb
+++ b/legmma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
     "REPLACE_NO_SPACE = re.compile(\"(\\d)|(\\.)|(\\;)|(\\:)|(\\!)|(\\')|(\\?)|(\\,)|(\\\")|(\\|)|(\\()|(\\))|(\\[)|(\\])|(\\%)|(\\$)|(\\>)|(\\<)|(\\{)|(\\})\")\n",
     "REPLACE_WITH_SPACE = re.compile(\"(<br\\s/><br\\s/?)|(-)|(/)|(:).\")\n",
     "\n",
-    "train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=10)\n",
+    "train = pd.read_csv(r\"C:\\Users\\Admin\\OneDrive\\Documents\\Webdev\\hatespeech\\train.csv\", nrows=100)\n",
     "\n",
     "#train = pd.read_csv(r\"C:\\Users\\jmest\\Documents\\Files\\C4S2\\Thesis\\ThesisFiles-main\\ThesisFiles-main\\hatespeech\\train.csv\", nrows=10)\n",
     "\n",
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 5)\n"
+      "(98, 5)\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 481,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,11 +596,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stemmer(tokens):\n",
+    "def stemmer(token):\n",
     "\n",
     "    global PERIOD_FLAG\n",
     "    global PASS_FLAG\n",
@@ -618,46 +618,46 @@
     "    word_info['clean'] = '-'\n",
     "    stemmed_tokens = []\n",
     "\n",
-    "    for token in tokens:\n",
-    "        word_info = {}\n",
-    "        word_info[\"word\"] = token\n",
     "\n",
-    "        if (PERIOD_FLAG == True and token[0].isupper()) or \\\n",
-    "                (PERIOD_FLAG == False and token[0].islower()):\n",
-    "            token = token.lower()\n",
-    "            du1_stem = clean_duplication(token, DUPLICATE)\n",
-    "            pre_stem = clean_prefix(du1_stem, PREFIX)\n",
-    "            rep_stem = clean_repitition(pre_stem, REPITITION)\n",
-    "            inf_stem = clean_infix(rep_stem, INFIX)\n",
-    "            rep_stem = clean_repitition(inf_stem, REPITITION)\n",
-    "            suf_stem = clean_suffix(rep_stem, SUFFIX)\n",
-    "            du2_stem = clean_duplication(suf_stem, DUPLICATE)\n",
-    "            cle_stem = clean_stemmed(du2_stem, CLEANERS, REPITITION)\n",
-    "            cle_stem = clean_duplication(cle_stem, DUPLICATE)\n",
+    "    word_info = {}\n",
+    "    word_info[\"word\"] = token\n",
     "\n",
-    "            if '-' in cle_stem:\n",
-    "                cle_stem.replace('-', '')\n",
+    "    if (PERIOD_FLAG == True and token[0].isupper()) or \\\n",
+    "            (PERIOD_FLAG == False and token[0].islower()):\n",
+    "        token = token.lower()\n",
+    "        du1_stem = clean_duplication(token, DUPLICATE)\n",
+    "        pre_stem = clean_prefix(du1_stem, PREFIX)\n",
+    "        rep_stem = clean_repitition(pre_stem, REPITITION)\n",
+    "        inf_stem = clean_infix(rep_stem, INFIX)\n",
+    "        rep_stem = clean_repitition(inf_stem, REPITITION)\n",
+    "        suf_stem = clean_suffix(rep_stem, SUFFIX)\n",
+    "        du2_stem = clean_duplication(suf_stem, DUPLICATE)\n",
+    "        cle_stem = clean_stemmed(du2_stem, CLEANERS, REPITITION)\n",
+    "        cle_stem = clean_duplication(cle_stem, DUPLICATE)\n",
     "\n",
-    "        else:\n",
-    "            PERIOD_FLAG = False\n",
-    "            cle_stem = clean_stemmed(token, CLEANERS, REPITITION)\n",
-    "            word_info[\"root\"]   = token\n",
-    "            word_info[\"prefix\"] = '[]'\n",
-    "            word_info[\"infix\"]  = '[]'\n",
-    "            word_info[\"suffix\"] = '[]'\n",
-    "            word_info[\"repeat\"] = '[]'\n",
-    "            word_info[\"dupli\"]  = '[]'\n",
-    "            word_info[\"clean\"]  = cle_stem\n",
+    "        if '-' in cle_stem:\n",
+    "            cle_stem.replace('-', '')\n",
+    "\n",
+    "    else:\n",
+    "        PERIOD_FLAG = False\n",
+    "        cle_stem = clean_stemmed(token, CLEANERS, REPITITION)\n",
+    "        word_info[\"root\"]   = token\n",
+    "        word_info[\"prefix\"] = '[]'\n",
+    "        word_info[\"infix\"]  = '[]'\n",
+    "        word_info[\"suffix\"] = '[]'\n",
+    "        word_info[\"repeat\"] = '[]'\n",
+    "        word_info[\"dupli\"]  = '[]'\n",
+    "        word_info[\"clean\"]  = cle_stem\n",
     "\n",
     "        stemmed_tokens.append(cle_stem)\n",
     "\n",
-    "    return stemmed_tokens\n",
+    "    return cle_stem\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,145 +688,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    [inaasahan, vice, president, eomar, binay, taong]\n",
-       "1    [mar, roas, tang, ina, tuwid, daan, daw, eh, s...\n",
-       "2    [salamat, sawang, suporta, taga, makati, pagba...\n",
-       "3                        [putangina, mo, binay, takbo]\n",
-       "4    [binay, with, selective, amnesia, forgetting, ...\n",
-       "5    [it, doesn, t, matter, whoever, won, between, ...\n",
-       "6    [nognog, nognog, nag, malasakit, wtf, tangina,...\n",
-       "7                                                   []\n",
-       "8    [what, abi, binay, said, on, running, for, mak...\n",
-       "9    [srsly, how, can, binay, do, away, with, no, t...\n",
+       "0         [inaasa, vice, resident, jejomar, binay, tao]\n",
+       "1     [mar, roxas, tang, ina, tuwid, daan, daw, eh, ...\n",
+       "2     [salamat, sawa, suporta, taga, kati, balik, bi...\n",
+       "3                         [putangina, mo, binay, takbo]\n",
+       "4     [binay, with, selective, amnesia, forgett, abo...\n",
+       "5     [it, doesn, t, matted, hoeved, won, between, d...\n",
+       "6     [nognog, nognog, nag, malasakit, wtf, tangina,...\n",
+       "7                                                    []\n",
+       "8     [what, abi, binay, said, on, runni, for, kati,...\n",
+       "9     [srsly, how, can, binay, do, away, with, no, t...\n",
+       "10    [sen, race, poe, puro, puso, lugmok, bansa, na...\n",
+       "11    [laki, gastos, binay, tapos, laki, talo, mayo,...\n",
+       "12         [endo, kay, pnoy, no, extension, mar, roxas]\n",
+       "13    [pet, heory, contrasted, w, pnoy, for, past, y...\n",
+       "14    [ba, si, binay, yuan, nognog, pandak, laki, hi...\n",
+       "15    [reak, vcm, side, novotel, cubao, owned, by, m...\n",
+       "16    [di, daw, sii, boto, si, mds, talo, baka, dun,...\n",
+       "17    [so, anak, mar, pala, ito, si, djp, won, t, be...\n",
+       "18    [kapal, mukha, niyo, pnoy, roxas, tapos, niyo,...\n",
+       "19    [eh, di, wow, talaga, gamit, gamit, yung, pand...\n",
+       "20    [para, gusto, maka, tandem, mar, roxas, libera...\n",
+       "21     [si, senatod, nancy, binay, ba, tukoy, mo, haha]\n",
+       "22    [naman, si, mar, roxas, para, p, i, kipa, sani...\n",
+       "23    [alma, moreno, ok, despite, bei, bashed, oved,...\n",
+       "24    [i, will, definitely, not, vote, for, binay, a...\n",
+       "25    [si, mar, roxas, yung, para, cartoon, or, anim...\n",
+       "26    [political, ad, on, respect, not, a, response,...\n",
+       "27    [mar, roxas, is, in, uili, sabela, today, to, ...\n",
+       "28                              [sooo, not, mar, roxas]\n",
+       "29                     [kaira, tong, commercial, binay]\n",
+       "30    [suporta, goberna, fugao, kay, vp, binay, sala...\n",
+       "31                              [haha, binay, jollibee]\n",
+       "32    [pcandidate, sentrillanes, campaign, more, for...\n",
+       "33                       [that, binay, commercial, tho]\n",
+       "34    [mar, offered, unity, talks, w, race, poe, vit...\n",
+       "35    [reklamo, yung, sabay, jeep, duterte, daw, bot...\n",
+       "36          [drama, hugot, trabaho, lang, higit, nakaw]\n",
+       "37                                [itsshowtime, tomiho]\n",
+       "38    [if, mr, palengke, looses, his, residential, b...\n",
+       "39                     [binay, completes, senate, late]\n",
+       "40                                         [lol, binay]\n",
+       "41    [mar, roxas, handa, harap, ibago, imbestigasyo...\n",
+       "42                           [mar, roxas, debates, daw]\n",
+       "43    [sana, kasi, resident, duterte, and, vice, res...\n",
+       "44                                      [lonely, binay]\n",
+       "45    [binay, kang, talaga, nognog, pandak, laki, hi...\n",
+       "46    [mar, roxas, son, olo, now, tumpi, for, his, d...\n",
+       "47    [handa, po, heel, haid, pnoy, rillianes, mar, ...\n",
+       "48                            [wow, binay, bayan, haha]\n",
+       "49    [talaga, mas, pili, si, roxas, binay, oved, md...\n",
        "Name: lemmatize_modstem, dtype: object"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 491,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train['lemmatize_modstem']"
+    "train['lemmatize_modstem'].head(50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Perform stemming\n",
-    "train['stemmed'] = train['tokenize'].apply(stemmer)\n",
+    "#train['stemmed'] = train['tokenize'].apply(stemmer)\n",
     "#train['stemmed'] = train['stemmed'].apply(nltk.tokenize.WhitespaceTokenizer().tokenize) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 488,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>stemmed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[asa, vice, resident, jejomar, binay, tao]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[mar, roxas, tang, ina, tuwid, daan, daw, eh, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[salamat, sawa, suporta, taga, kati, balik, bi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[putangina, mo, binay, takbo]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[binay, with, selective, amnesia, forgett, abo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>[it, doesn, t, matted, hoeved, won, between, d...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>[nognog, nognog, nag, malasakit, wtf, tangina,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>[what, abi, binay, said, on, runni, for, kati,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>[srsly, how, can, binay, do, away, with, no, t...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             stemmed\n",
-       "0         [asa, vice, resident, jejomar, binay, tao]\n",
-       "1  [mar, roxas, tang, ina, tuwid, daan, daw, eh, ...\n",
-       "2  [salamat, sawa, suporta, taga, kati, balik, bi...\n",
-       "3                      [putangina, mo, binay, takbo]\n",
-       "4  [binay, with, selective, amnesia, forgett, abo...\n",
-       "5  [it, doesn, t, matted, hoeved, won, between, d...\n",
-       "6  [nognog, nognog, nag, malasakit, wtf, tangina,...\n",
-       "7                                                 []\n",
-       "8  [what, abi, binay, said, on, runni, for, kati,...\n",
-       "9  [srsly, how, can, binay, do, away, with, no, t..."
-      ]
-     },
-     "execution_count": 381,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train[['stemmed']]"
+    "#train[['stemmed']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +804,7 @@
        "      <th></th>\n",
        "      <th>label</th>\n",
        "      <th>tokenize</th>\n",
-       "      <th>stemmed</th>\n",
+       "      <th>lemmatize_modstem</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -860,7 +812,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>[inaasahan, vice, president, jejomar, binay, t...</td>\n",
-       "      <td>[asa, vice, resident, jejomar, binay, tao]</td>\n",
+       "      <td>[inaasa, vice, resident, jejomar, binay, tao]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -933,8 +885,8 @@
        "8      0  [what, abi, binay, said, on, running, for, mak...   \n",
        "9      1  [srsly, how, can, binay, do, away, with, no, t...   \n",
        "\n",
-       "                                             stemmed  \n",
-       "0         [asa, vice, resident, jejomar, binay, tao]  \n",
+       "                                   lemmatize_modstem  \n",
+       "0      [inaasa, vice, resident, jejomar, binay, tao]  \n",
        "1  [mar, roxas, tang, ina, tuwid, daan, daw, eh, ...  \n",
        "2  [salamat, sawa, suporta, taga, kati, balik, bi...  \n",
        "3                      [putangina, mo, binay, takbo]  \n",
@@ -946,13 +898,13 @@
        "9  [srsly, how, can, binay, do, away, with, no, t...  "
       ]
      },
-     "execution_count": 382,
+     "execution_count": 489,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train[['label','tokenize','stemmed']].head(10)"
+    "train[['label','tokenize','lemmatize_modstem']].head(10)"
    ]
   }
  ],
